fix dodgy links

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </div>
                 </div>		
                 <div class="numbertext">1 / 2</div>
-                <a href="projects/littlerailways"><img class="image" src="assets/personal/Little Railways Web Screen.png" style="width:100%"></a>
+                <a href="./projects/littlerailways"><img class="image" src="assets/personal/Little Railways Web Screen.png" style="width:100%"></a>
                 <div class="text">Little Railways is a passion project of mine, inspired by the game Railroads Online, it combines the train simulator and tycoon genres together. Its set on a fictional narrow gauge railway inspired by the Ffestiniog Railway in Wales.</div>
                 <br>                
             </div>
@@ -115,7 +115,7 @@
                     </div>
                 </div>		
                 <div class="numbertext">2 / 2</div>
-                <a href="projects/nautical"><img class="image" src="assets/personal/NNSplash.png" style="width:100%"></a>
+                <a href="./projects/nautical"><img class="image" src="assets/personal/NNSplash.png" style="width:100%"></a>
                 <div class="text">A whimsical underwater FPS. Where you use bubbles to eject evil Boctopus (bubble-shooting octopus) from the ocean. Whilst reclaiming the lost crystal treasures of the deep; created for the 2025 Global Games Jam.</div>
                 <br>                
             </div>
@@ -159,7 +159,7 @@
                     </div>
                 </div>		
                 <div class="numbertext">1 / 6</div>
-                <a href="projects/concat/"><img class="image" src="assets/university/CC.png" style="width:100%"></a>
+                <a href="./projects/concat/"><img class="image" src="assets/university/CC.png" style="width:100%"></a>
                 <div class="text">Construction Catastrophe is the first group project I ever worked on. It is a wacky party game where players have to build a structure together then be the last man standing after a series of disasters aim to destroy what they have built. </div>
                 <br>
             </div>
@@ -175,7 +175,7 @@
                     </div>
                 </div>		
                 <div class="numbertext">2 / 6</div>
-                <a href="projects/dissertation/"><img class="image" src="assets/university/dissertation.png" style="width:100%"></a>
+                <a href="./projects/dissertation/"><img class="image" src="assets/university/dissertation.png" style="width:100%"></a>
                 <div class="text">This is the project I worked on as part of my dissertation.</div>
                 <br>
             </div>
@@ -192,7 +192,7 @@
                     </div>
                 </div>	
                 <div class="numbertext">3 / 6</div>
-                <a href="projects/signaller/"><img class="image" src="assets/university/SignallerS1.png" style="width:100%"></a>
+                <a href="./projects/signaller/"><img class="image" src="assets/university/SignallerS1.png" style="width:100%"></a>
                 <div class="text">The Signaller is a 2D top-down simulator puzzle game where players must take on the role of a Network Rail signaller. 
 They need to route trains to their destination by controlling signals and points in a variety of levels based off real stations on the UK rail network. </div>
                 <br>
@@ -206,7 +206,7 @@ They need to route trains to their destination by controlling signals and points
                     </div>
                 </div>	
                 <div class="numbertext">4 / 6</div>
-                <a href="projects/subway/"><img class="image" src="assets/university/Subway1.png" style="width:100%"></a>
+                <a href="./projects/subway/"><img class="image" src="assets/university/Subway1.png" style="width:100%"></a>
                 <div class="text">As part of my module Multiplayer Level Design I was tasked with creating a king of the hill map for Team Fortress 2 in the hammer editor.</div>
                 <br>
             </div>
@@ -223,7 +223,7 @@ They need to route trains to their destination by controlling signals and points
                     </div>
                 </div>	
                 <div class="numbertext">5 / 6</div>
-                <a href="projects/intothelab/"><img class="image" src="assets/university/Lab1.png" style="width:100%"></a>
+                <a href="./projects/intothelab/"><img class="image" src="assets/university/Lab1.png" style="width:100%"></a>
                 <div class="text">Into the Labyrinth is a prototype 2D platformer that I created for my university work. A Daring fox must venture into the deadly Labyrinth to take down the Minotaur that killed his family in a 2-stage boss fight.</div>
                 <br>
             </div>
@@ -240,7 +240,7 @@ They need to route trains to their destination by controlling signals and points
                     </div>
                 </div>	
                 <div class="numbertext">6 / 6</div>
-                <a href="projects/mario/"><img class="image" src="assets/university/Mario1.png" style="width:100%"></a>
+                <a href="./projects/mario/"><img class="image" src="assets/university/Mario1.png" style="width:100%"></a>
                 <div class="text">This project was one of my first introductions to the C++ language. I had to create a lightweight game engine using C++ and SDL2 libraries, then recreate a simple version of the original Super Mario Bros within it.</div>
                 <br>
             </div>
@@ -284,7 +284,7 @@ They need to route trains to their destination by controlling signals and points
                     </div>
                 </div>	
                 <div class="numbertext">1 / 1</div>
-                <a href="projects/ecopolis/"><img class="image" src="assets/corporate/Ecopolis.PNG" style="width:100%"></a>
+                <a href="./projects/ecopolis/"><img class="image" src="assets/corporate/Ecopolis.PNG" style="width:100%"></a>
                 <div class="text">Ecopolis is a city builder I worked on when working for Bulldog Studios. It is a city builder made to encourage and promote green city planning to young students and teach them the consequences of pollution.</div>
                 <br>
             </div>
