--- a/projects/signaller/index.html
+++ b/projects/signaller/index.html
@@ -5,13 +5,12 @@
     <title>Thomas Stevens | Games Programmer</title>
     <link rel="icon" type="image/x-icon" href="/assets/tsfavicon.png">
     <link rel="stylesheet" href="../../styles.css">
-    <link rel="stylesheet" href="./page.css">
-    <link rel="stylesheet" href="../slideshow.css">
+    <link rel="stylesheet" href="../page.css">
+    <link rel="stylesheet" href="../../slideshow.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
-
 <body>
     <header>
         <h1>THE SIGNALLER</h1>
