fix image links

--- a/projects/concat/index.html
+++ b/projects/concat/index.html
@@ -59,7 +59,7 @@
                 <li><iframe class="video" width="620px" height="320px" style="padding: 10px;" frameBorder="0"
 					src="https://www.youtube.com/embed/rFnE1Xo4TLU">
 				</iframe></li>
-                <li><img class="projectimage" src="../assets/university/CCAward.png" alt="Project Image"></li>
+                <li><img class="projectimage" src="../../assets/university/CCAward.png" alt="Project Image"></li>
                 </ul>
                 
             </div>
