--- a/projects/signaller/index.html
+++ b/projects/signaller/index.html
@@ -53,8 +53,8 @@
 				<li><iframe class="video" width="620px" height="320px" style="padding: 10px;" frameBorder="0"
 					src="https://www.youtube.com/embed/uCq0BD27PQM">
 				</iframe></li>
-                <li><img class="projectimage" src="../assets/university/TS2.png" alt="Project Image"></li>
-                <li><img class="projectimage" src="../assets/university/TS3.png" alt="Project Image"></li>
+                <li><img class="projectimage" src="../../assets/university/TS2.png" alt="Project Image"></li>
+                <li><img class="projectimage" src="../../assets/university/TS3.png" alt="Project Image"></li>
                 </ul>
                 
             </div>
