--- a/projects/ecopolis/index.html
+++ b/projects/ecopolis/index.html
@@ -56,7 +56,7 @@
             <div class="projectimages">
                 <br><br>
                 <ul>
-				<li><img class="projectimage" src="../assets/corporate/Ecopolis.PNG" alt="Project Image"></li>
+				<li><img class="projectimage" src="../../assets/corporate/Ecopolis.PNG" alt="Project Image"></li>
                 <li><iframe class="video" width="620px" height="320px" style="padding: 10px;" frameBorder="0"
 					src="https://www.youtube.com/embed/Gt9U5kbTECc">
 				</iframe></li>
