--- a/projects/intothelab/index.html
+++ b/projects/intothelab/index.html
@@ -55,8 +55,8 @@
 				<li><iframe class="video" width="620px" height="320px" style="padding: 10px;" frameBorder="0"
 					src="https://www.youtube.com/embed/T-RHEt5ZhF8">
 				</iframe></li>
-                <li><img class="projectimage" src="../assets/university/Lab2.png" alt="Project Image"></li>
-                <li><img class="projectimage" src="../assets/university/Lab3.png" alt="Project Image"></li>
+                <li><img class="projectimage" src="../../assets/university/Lab2.png" alt="Project Image"></li>
+                <li><img class="projectimage" src="../../assets/university/Lab3.png" alt="Project Image"></li>
                 </ul>
                 
             </div>
