--- a/projects/littlerailways/index.html
+++ b/projects/littlerailways/index.html
@@ -56,7 +56,7 @@
 
             <div class="projectimages">
                 <ul>
-                <li><img class="projectimage" src="../assets/personal/Little Railways Web Screen.png" alt="Project Image"></li>
+                <li><img class="projectimage" src="../../assets/personal/Little Railways Web Screen.png" alt="Project Image"></li>
                 <li><iframe class="video" width="620px" height="320px" style="padding: 10px;" frameBorder="0"
 					src="https://www.youtube.com/embed/YS-Oo6UD6tg">
 				</iframe></li>
