--- a/projects/mario/index.html
+++ b/projects/mario/index.html
@@ -59,8 +59,8 @@
 				<li><iframe class="video" width="620px" height="320px" style="padding: 10px;" frameBorder="0"
 					src="https://www.youtube.com/embed/w0x4ybcFDmM">
 				</iframe></li>
-                <li><img class="projectimage" src="../assets/university/Mario2.png" alt="Project Image"></li>
-                <li><img class="projectimage" src="../assets/university/Mario3.png" alt="Project Image"></li>
+                <li><img class="projectimage" src="../../assets/university/Mario2.png" alt="Project Image"></li>
+                <li><img class="projectimage" src="../../assets/university/Mario3.png" alt="Project Image"></li>
                 </ul>
                 
             </div>
