--- a/projects/nautical/index.html
+++ b/projects/nautical/index.html
@@ -54,8 +54,8 @@
                 <li><iframe class="video" width="620px" height="320px" style="padding: 10px;" frameBorder="0"
                     src="https://www.youtube.com/embed/iU1fHMOy7lc">
                 </iframe></li> 
-                <li><img class="projectimage" src="../assets/personal/NN1.png" alt="Project Image"></li>
-                <li><img class="projectimage" src="../assets/personal/NN2.png" alt="Project Image"></li>
+                <li><img class="projectimage" src="../../assets/personal/NN1.png" alt="Project Image"></li>
+                <li><img class="projectimage" src="../../assets/personal/NN2.png" alt="Project Image"></li>
                 </ul>
                 
             </div>
