--- a/projects/subway/index.html
+++ b/projects/subway/index.html
@@ -53,8 +53,8 @@
 				<li><iframe class="video" width="620px" height="320px" style="padding: 10px;" frameBorder="0"
 					src="https://www.youtube.com/embed/MdwyQnm80rA">
 				</iframe></li>
-                <li><img class="projectimage" src="../assets/university/Subway2.gif" alt="Project Image"></li>
-                <li><img class="projectimage" src="../assets/university/Subway3.gif" alt="Project Image"></li>
+                <li><img class="projectimage" src="../../assets/university/Subway2.gif" alt="Project Image"></li>
+                <li><img class="projectimage" src="../../assets/university/Subway3.gif" alt="Project Image"></li>
                 </ul>
                 
             </div>
