readd cv download

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ They need to route trains to their destination by controlling signals and points
         <p>I'm eager to discuss potential projects or answer any questions you may have. Feel free to reach out - I'm always happy to help.</p>
         
         <br><br>
-        <div class="centerer buttonswapper"><a class="oop" href="mailto:thomasstevens2003@outlook.com">Contact me by Email</a><a class="oop" id="downloadButton">Download my CV</a></div>
+        <div class="centerer buttonswapper"><a class="oop" href="mailto:thomasstevens2003@outlook.com">Contact me by Email</a><a class="oop" id="downloadButton" href="./assets/cv/thomasstevens_cv.pdf">Download my CV</a></div>
 
     </section>
 
