center caption text in slideshow

--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@ They need to route trains to their destination by controlling signals and points
             </div>
 			
 			<div class="mySlides University fade">
-                <div class="heading">KOTH Subway</div>
+                <div class="heading">TF2 Subway Map</div>
                 <div class="work-item-tags-container">
-                    <div class="work-item-tag" style="background-color: #E0DD00">
+                    <div class="work-item-tag" style="background-color: #F74843">
                         <span>Hammer Editor</span>
                     </div>
                 </div>	
