align avatar centrally

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <section class="about" id ="home">
-        <br><br><br>
+        <br>
         <div class="topsectionwrapper">
             <div class="topsectiontext">
                 <h1>Hi!👋🏻 I'm Thomas Stevens</h1>
@@ -63,8 +63,9 @@
   
                 <br>
             </div>
-            <img class="avatar" src="assets/WebPFP.jpg">
-			
+            <div class="topsectionimage">
+                <img class="avatar" src="assets/WebPFP.jpg">
+            </div>
         </div>
        <a class="cta" href="https://github.com/T-Stevens1299">Check out my GitHub</a>
 
