Small link change

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ They need to route trains to their destination by controlling signals and points
     <script src="slideshowpersonal.js"></script>
 
     <footer>
-        <a href="https://www.danielhartgrove.xyz">© 2025 Thomas Stevens </a>
+        <a href="https://uk.linkedin.com/in/thomas-stevens-91a225254">© 2025 Thomas Stevens </a>
         <a href="mailto:hartgrovedaniel3@outlook.com">📧 Website Constructed by Daniel Hartgrove</a>
         <p>All Rights Reserved</p>
     </footer>
