--- a/projects/mario/index.html
+++ b/projects/mario/index.html
@@ -68,7 +68,7 @@
     </section>
 
     <footer>
-        <a href="https://www.danielhartgrove.xyz">© 2025 Thomas Stevens </a>
+        <a href="https://uk.linkedin.com/in/thomas-stevens-91a225254">© 2025 Thomas Stevens </a>
         <a href="mailto:hartgrovedaniel3@outlook.com">📧 Website Constructed by Daniel Hartgrove</a>
         <p>All Rights Reserved</p>
     </footer>
