--- a/projects/subway/index.html
+++ b/projects/subway/index.html
@@ -62,8 +62,8 @@
     </section>
 
     <footer>
-        <a href="mailto:hartgrovedaniel3@outlook.com">📧 © 2024 Daniel Hartgrove</a>
-        <a href="https://www.danielhartgrove.xyz">www.danielhartgrove.xyz</a>
+        <a href="https://uk.linkedin.com/in/thomas-stevens-91a225254">© 2025 Thomas Stevens </a>
+        <a href="mailto:hartgrovedaniel3@outlook.com">📧 Website Constructed by Daniel Hartgrove</a>
         <p>All Rights Reserved</p>
     </footer>
 
