add '2 time award winning' to topsectiontext'

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <h1>Hi!👋🏻 I'm Thomas Stevens</h1>
                 <h2>I am a games programmer based in Stoke-on-Trent 📍 </h2>
                 <br>
-				<p>I'm a 3rd year Computer Games Design and Programming Student at the University Of Staffordshire.</p>
+				<p>I'm a 2 time award winning Games Design and Programming Student at the University Of Staffordshire.</p>
 				<p>Always exploring ways to further my programming skills and create exciting projects!</p>
                 <p>I have experience working with:</p>
                 <br>
