fix style for other pages

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides Personal fade">
                     <div class="heading">Little Railways</div>
-                    <div class="work-item-tags-container">
+                    <div class="container row center hidemobile">
                         <div class="work-item-tag" style="background-color: #252422">
                             <span>Unreal Engine</span>
                         </div>
@@ -105,7 +105,7 @@
 
                 <div class="mySlides Personal fade">
                     <div class="heading">Nautical Nonsense</div>
-                    <div class="work-item-tags-container">
+                    <div class="container row center hidemobile">
                         <div class="work-item-tag" style="background-color: #252422">
                             <span>Unreal Engine</span>
                         </div>
@@ -151,7 +151,7 @@
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides University fade">
                     <div class="heading">Construction Catastrophe</div>
-                    <div class="work-item-tags-container">
+                    <div class="container row center hidemobile">
                         <div class="work-item-tag" style="background-color: #252422">
                             <span>Unreal Engine</span>
                         </div>
@@ -173,7 +173,7 @@
                 
                 <div class="mySlides University fade">
                     <div class="heading">Dissertation Project</div>
-                    <div class="work-item-tags-container">
+                    <div class="container row center hidemobile">
                         <div class="work-item-tag" style="background-color: #252422">
                             <span>Unreal Engine</span>
                         </div>
@@ -190,7 +190,7 @@
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides University fade">
                     <div class="heading">The Signaller</div>
-                    <div class="work-item-tags-container">
+                    <div class="container row center hidemobile">
                         <div class="work-item-tag" style="background-color: #8E8E8E">
                             <span>Unity</span>
                         </div>
@@ -207,7 +207,7 @@
                 
                 <div class="mySlides University fade">
                     <div class="heading">TF2 Subway Map</div>
-                    <div class="work-item-tags-container">
+                    <div class="container row center hidemobile">
                         <div class="work-item-tag" style="background-color: #F74843">
                             <span>Hammer Editor</span>
                         </div>
@@ -221,7 +221,7 @@
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides University fade">
                     <div class="heading">Into The Labrynth</div>
-                    <div class="work-item-tags-container">
+                    <div class="container row center hidemobile">
                         <div class="work-item-tag" style="background-color: #8E8E8E">
                             <span>Unity</span>
                         </div>
@@ -238,7 +238,7 @@
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides University fade">
                     <div class="heading">Mario Bros. Using SDL2</div>
-                    <div class="work-item-tags-container">
+                    <div class="container row center hidemobile">
                         <div class="work-item-tag" style="background-color: #00b4d8">
                             <span>C++</span>
                         </div>
@@ -281,7 +281,7 @@
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides Corporate fade">
                     <div class="heading">Ecopolis</div>
-                    <div class="work-item-tags-container">
+                    <div class="container row center hidemobile">
                         <div class="work-item-tag" style="background-color: #8E8E8E">
                             <span>Unity</span>
                         </div>
