Dissertation Image Update

--- a/projects/dissertation/index.html
+++ b/projects/dissertation/index.html
@@ -34,10 +34,7 @@
 
 
                 <h2>Abstract</h2>
-                <p>The AI opponents in real-time strategy aim to offer a challenge to human players when playing a match of an RTS game, however in most titles, even at the harder difficulties the AI still plays the same, they just tend to have a larger fighting force compared to the player. Resulting in the match feeling harder for the player, but not more challenging as they can use the same tactics as before.</p>
-                <p>Therefore, paper intends to investigate the development processes utilised by the games industry and researchers respectively, to develop AI opponents that try to create a challenging game state for the human players they are pitted against.</p>
-				<p>An RTS prototype will be developed in the Unreal 5 games engine, featuring a basic AI system to control the enemy faction a human player will play against. Four different techniques used by researchers and the games industry will then be injected into the AI’s code, or into the game mode itself. These techniques will then be tested by getting participants to play a match against each of the different AI opponents, after each match they will fill in a questionnaire answering whether they beat the AI and how difficult they were. These results will then be used to judge if the technique used is an effective way of creating a more challenging AI opponent.</p>
-				
+                <p>Realtime strategy (RTS) games are a sub-genre of strategy games which are characterised by the fact that all decisions and movements happen in real-time, unlike their turn-based counterparts. Calculating many decisions at runtime however can make it difficult to engineer challenging AI. Therefore, this paper investigated the different techniques and development processes used by the games industry and academia, to determine which ones are the most optimal for creating more challenging AI opponents within RTS games. These methods were tested in a brand new RTS framework developed in Unreal Engine 5, utilising C++ for greater performance. This framework included both the core mechanics of an RTS game, but also a basic AI structured according to practices researched in the literature of this field. The methods researched were then implemented into the decision-making process of this basic AI. These were then tested against human participants to see from both data collected on match statistics, as well as participant opinion, on whether or not the AI they played was challenging. This paper found that methods such as dynamic difficulty scaling and the Lanchester combat prediction algorithm were deemed more challenging by participants and supporting data, rather than methods like allowing the AI to cheat.</p>
 				<h2>Current Project Progress</h2>
                 <p>As of the end of December, the literature review and research methodology sections of the dissertation are completed. The core mechanics of the prototype are finished, the only development left to complete is developing the AI system itself.</p>
             </div>
@@ -47,7 +44,7 @@
                 <ul>
                 <li><img class="projectimage" src="../../assets/university/dissertation.png" alt="Project Image"></li>
                 <li><iframe class="video" width="620px" height="320px" style="padding: 10px;" frameBorder="0"
-					src="https://www.youtube.com/embed/9COYcZH2DSw">
+					src="https://www.youtube.com/embed/_jmNUaSDjQM">
 				</iframe></li> 
                 <!-- <li><iframe class="video" width="620px" height="320px" style="padding: 10px;" frameBorder="0" -->
 					<!-- src="https://www.youtube.com/embed/yQMWXz8LJ98"> -->
