--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                     <p>I'm a 2 time award winning Games Design and Programming Student at the University Of Staffordshire. I'm always exploring ways to further my programming skills and create exciting projects!</p>
                     <br>
                     <div id="social_links">
-                        <a href="https://uk.linkedin.com/"><i class="fa fa-github"></i></a>
-                        <a href="https://uk.linkedin.com/"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://github.com/T-Stevens1299"><i class="fa fa-github"></i></a>
+                        <a href="https://uk.linkedin.com/in/thomas-stevens-91a225254"><i class="fa fa-linkedin"></i></a>
                         <a href="mailto:thomasstevens2003@outlook.com"><i class="fa fa-envelope"></i></a>
                     </div>
                     <br><br>
@@ -183,9 +183,28 @@
                     </div>		
                     <div class="numbertext">2 / 6</div>
                     <a href="./projects/dissertation/"><img class="image" src="assets/university/dissertation.png" style="width:100%"></a>
-                    <div class="text">This is the project I worked on as part of my dissertation.</div>
+                    <div class="text">For my dissertation, I chose to study the development processes behind challenging AI oppenents in Realtime Strategy Games. 
+                        I inputted these techniques into my own baseline AI and pitted the bots against human players to determine which methods created the most challenging matches.
+                    </div>
                     <br>
                 </div>
+                    
+                    <!-- Full-width images with number and caption text -->
+                    <div class="mySlides University fade">
+                        <div class="heading">Sinistar Remake</div>
+                        <div class="fullwidthcontainer row center hidemobile">
+                            <div class="work-item-tag" style="background-color: #00b4d8">
+                                <span>C++</span>
+                            </div>
+                            <div class="work-item-tag" style="background-color: #8bc34b">
+                                <span>SFML</span>
+                            </div>
+                        </div>	
+                        <div class="numbertext">3 / 6</div>
+                        <a href="./projects/sinistar/"><img class="image" src="assets/university/Mario1.png" style="width:100%"></a>
+                        <div class="text">As part of my low level gameplay module, I had to remake classic arcade game in C++ using the SFML Libraries. The arcade game I chose to remake was Sinistar.</div>
+                        <br>
+                    </div>
 
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides University fade">
@@ -198,7 +217,7 @@
                             <span>C#</span>
                         </div>
                     </div>	
-                    <div class="numbertext">3 / 6</div>
+                    <div class="numbertext">4 / 6</div>
                     <a href="./projects/signaller/"><img class="image" src="assets/university/SignallerS1.png" style="width:100%"></a>
                     <div class="text">The Signaller is a 2D top-down simulator puzzle game where players must take on the role of a Network Rail signaller. 
     They need to route trains to their destination by controlling signals and points in a variety of levels based off real stations on the UK rail network. </div>
@@ -212,7 +231,7 @@
                             <span>Hammer Editor</span>
                         </div>
                     </div>	
-                    <div class="numbertext">4 / 6</div>
+                    <div class="numbertext">5 / 6</div>
                     <a href="./projects/subway/"><img class="image" src="assets/university/Subway1.png" style="width:100%"></a>
                     <div class="text">As part of my module Multiplayer Level Design I was tasked with creating a king of the hill map for Team Fortress 2 in the hammer editor.</div>
                     <br>
@@ -229,28 +248,12 @@
                             <span>C#</span>
                         </div>
                     </div>	
-                    <div class="numbertext">5 / 6</div>
+                    <div class="numbertext">6 / 6</div>
                     <a href="./projects/intothelab/"><img class="image" src="assets/university/Lab1.png" style="width:100%"></a>
                     <div class="text">Into the Labyrinth is a prototype 2D platformer that I created for my university work. A Daring fox must venture into the deadly Labyrinth to take down the Minotaur that killed his family in a 2-stage boss fight.</div>
                     <br>
                 </div>
 
-                <!-- Full-width images with number and caption text -->
-                <div class="mySlides University fade">
-                    <div class="heading">Mario Bros. Using SDL2</div>
-                    <div class="fullwidthcontainer row center hidemobile">
-                        <div class="work-item-tag" style="background-color: #00b4d8">
-                            <span>C++</span>
-                        </div>
-                        <div class="work-item-tag" style="background-color: #2b2bcd">
-                            <span>SDL</span>
-                        </div>
-                    </div>	
-                    <div class="numbertext">6 / 6</div>
-                    <a href="./projects/mario/"><img class="image" src="assets/university/Mario1.png" style="width:100%"></a>
-                    <div class="text">This project was one of my first introductions to the C++ language. I had to create a lightweight game engine using C++ and SDL2 libraries, then recreate a simple version of the original Super Mario Bros within it.</div>
-                    <br>
-                </div>
                 <!-- Next and previous buttons -->
                 <a class="prev" onclick="plusSlidesUniversity(-1)">&#10094;</a>
                 <a class="next" onclick="plusSlidesUniversity(1)">&#10095;</a>
@@ -342,5 +345,4 @@
     </footer>
 
 </body>
-
 </html>
