Updated dissertation page and added senior collab game

--- a/projects/littlerailways/index.html
+++ b/projects/littlerailways/index.html
@@ -27,10 +27,12 @@
                 <p>Little Railways is a hybrid railroad simulator tycoon game, heavily inspired by Railroads Online. In this game you must drive trains over an existing network and deliver goods and passengers from A to B in order to make money to upgrade your engines and rolling stock.</p>
 				
 				<h2>Project Info</h2>
-				<p>Role: Gameplay Programmer/Games Designer/Games Artist</p>
-				<p>Team Size: 1</p>
-				<p>Time Frame: Ongoing development</p>
-				<p>Engine & Language: Unreal with C++</p>
+                <ul>
+                    <li>Role: Sole Game developer</llii>
+                    <li>Team Size: 1</li>
+                    <li>Time Frame: Ongoing development</li>
+                    <li>Engine & Language: Unreal with C++</li>
+                </ul>
 
 
                 <h2>Project Introduction</h2>
