Change to signaller project page

--- a/projects/signaller/index.html
+++ b/projects/signaller/index.html
@@ -26,11 +26,12 @@
                 <p>The signaller is a 2D top-down simulator puzzle game where players must take on the role of a Network Rail signaller. They need to route trains to their destination by controlling signals and points in a variety of levels based of real stations on the UK rail network.</p>
 				
 				<h2>Project Info</h2>
-				<p>Role: Gameplay Programmer/Games Designer/Games Artist</p>
-				<p>Team Size: 1</p>
-				<p>Time Frame: 165 Hours across 1 academic year</p>
-				<p>Engine & Language: Unity with C#</p>
-
+                <ul>
+				    <p>Role: Sole Game Developer</p>
+				    <p>Team Size: 1</p>
+				    <p>Time Frame: 165 Hours across 1 academic year</p>
+				    <p>Engine & Language: Unity with C#</p>
+                </ul>
 
                 <h2>Project Introduction</h2>
                 <p>The Signaller is a project I worked on in my second year of university for a module called 'Indie Games Development.' The premise of this module was to create a fully fledged indie game by the end of the year using the industry standard workflows of sprint plans.</p>
