--- a/projects/concat/index.html
+++ b/projects/concat/index.html
@@ -74,7 +74,7 @@
 
     <footer>
         <a href="https://uk.linkedin.com/in/thomas-stevens-91a225254">© 2025 Thomas Stevens </a>
-        <a href="mailto:hartgrovedaniel3@outlook.com">📧 Website Constructed by Daniel Hartgrove</a>
+        <a href="mailto:contact@gazellewebstudios.co.uk">📧</a><a href="https://www.gazellewebstudios.co.uk">Website Constructed by Gazelle Web Studios</a>
         <p>All Rights Reserved</p>
     </footer>
 </body>
