Tiga nominated tag added

--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
                         <div class="work-item-tag" style="background-color: #00b4d8">
                             <span>C++</span>
                         </div>
+                        <div class="work-item-tag" style="background-color: #ff7b00">
+                            <span>TIGA Nominated</span>
+                        </div>
                     </div>		
                     <div class="numbertext">1 / 6</div>
                     <a href="./projects/dissertation/"><img class="image" src="assets/university/nw1.png" style="width:100%"></a>
