update footer... again!

--- a/projects/ecopolis/index.html
+++ b/projects/ecopolis/index.html
@@ -72,7 +72,7 @@
 
     <footer>
         <a href="https://uk.linkedin.com/in/thomas-stevens-91a225254">© 2025 Thomas Stevens </a>
-        <a href="mailto:contact@gazellewebstudios.co.uk">📧</a><a href="https://www.gazellewebstudios.co.uk">Website Constructed by Gazelle Web Studios</a>
+         <div><a href="mailto:contact@gazellewebstudios.co.uk">📧 </a><a href="https://www.gazellewebstudios.co.uk">Website constructed by Gazelle Web Studios</a></div>
         <p>All Rights Reserved</p>
     </footer>
 
