TIGA Award Mention on index page

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         </div>
                     </div>
                     <br>
-                    <p>I'm a 2 time award winning Games Design and Programming Student at the University Of Staffordshire. I'm always exploring ways to further my programming skills and create exciting projects!</p>
+                    <p>I'm a TIGA Nominated Computer Games Design and Programming graduate from the University Of Staffordshire. I'm always exploring ways to further my programming skills and create exciting projects!</p>
                     <br>
                     <div id="social_links">
                         <a href="https://github.com/T-Stevens1299"><i class="fa fa-github"></i></a>
