Crab Sticks Added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="split_container inverse-mobile">
                 <div id="abouttext" class="split_content column ">
                     <h1>Hi!👋🏻 I'm Thomas Stevens</h1>
-                    <h2>I am a games programmer based in Stoke-on-Trent 📍 </h2>
+                    <h2>I am a games programmer based in Northampton 📍 </h2>
                     <div class="container row left hidemobile">
                         <div class="work-item-tag" style="background-color: #00b4d8">
                             <span>C++</span>
@@ -60,7 +60,7 @@
                         </div>
                     </div>
                     <br>
-                    <p>I'm a TIGA Nominated Computer Games Design and Programming graduate from the University Of Staffordshire. I'm always exploring ways to further my programming skills and create exciting projects!</p>
+                    <p>I'm a 1st class Computer Games Design and Programming graduate from the University Of Staffordshire and finalist for TIGA Graduate of the Year: Programmer 2025. I'm always exploring ways to further my programming skills and create exciting projects!</p>
                     <br>
                     <div id="social_links">
                         <a href="https://github.com/T-Stevens1299"><i class="fa fa-github"></i></a>
@@ -158,7 +158,7 @@
                             <span>C++</span>
                         </div>
                         <div class="work-item-tag" style="background-color: #ff7b00">
-                            <span>TIGA Nominated</span>
+                            <span>TIGA Finalist</span>
                         </div>
                     </div>		
                     <div class="numbertext">1 / 6</div>
@@ -290,6 +290,28 @@
 
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides Corporate fade">
+                    <div class="heading">Crab Sticks</div>
+                    <div class="fullwidthcontainer row center hidemobile">
+                        <div class="work-item-tag" style="background-color: #252422">
+                            <span>Unreal Engine</span>
+                        </div>
+                        <div class="work-item-tag" style="background-color: #2b2bcd">
+                            <span>Blueprint</span>
+                        </div>
+                        <div class="work-item-tag" style="background-color: #00b4d8">
+                            <span>C++</span>
+                        </div>
+                        <div class="work-item-tag" style="background-color: #d97913">
+                            <span>Collaborative</span>
+                        </div>
+                    </div>	
+                    <div class="numbertext">1 / 2</div>
+                    <a href="./projects/crabsticks/"><img class="image" src="assets/corporate/Ecopolis.PNG" style="width:100%"></a>
+                    <div class="text">Crab Sticks is a </div>
+                    <br>
+                </div>
+
+                <div class="mySlides Corporate fade">
                     <div class="heading">Ecopolis</div>
                     <div class="fullwidthcontainer row center hidemobile">
                         <div class="work-item-tag" style="background-color: #8E8E8E">
@@ -302,7 +324,7 @@
                             <span>Collaborative</span>
                         </div>
                     </div>	
-                    <div class="numbertext">1 / 1</div>
+                    <div class="numbertext">2 / 2</div>
                     <a href="./projects/ecopolis/"><img class="image" src="assets/corporate/Ecopolis.PNG" style="width:100%"></a>
                     <div class="text">Ecopolis is a city builder I worked on when working for Bulldog Studios. It is a city builder made to encourage and promote green city planning to young students and teach them the consequences of pollution.</div>
                     <br>
@@ -317,6 +339,7 @@
             <!-- The dots/circles -->
             <div style="text-align:center">
                 <span class="dot Corporate" onclick="currentSlideCorporate(1)"></span>
+                <span class="dot Corporate" onclick="currentSlideCorporate(2)"></span>
             </div>
             <br>
         </div>
