--- a/projects/dissertation/index.html
+++ b/projects/dissertation/index.html
@@ -26,7 +26,8 @@
 				<h2>Project Introduction</h2>
                 <p>As part of my final year, I was required to write a dissertation. The topic I chose to research was how to create more challenging AI opponents in RTS games. Being an avid RTS player myself, I am disappointed that the majority of playable titles resort to letting the AI cheat to be more "difficult" to play against </p>
                 <p>Therefore, researching methods to make AI opponents difficult without cheating was very interesting to me. Alongside my dissertation, I required an artifact to test my hypothesis. Rather than testing these methods on exisitng games like Starcraft, I decided to develop my own RTS game from scratch to help understand the full development pipeline of RTS games. </p>
-				
+				<p>This project was showcased as part of my nomination for the TIGA Graduate of the Year Award, programmer category, for which I was one of the 7 finalists.</p>
+
 				<div class="centerer"><a class="cta" href="../../assets/dissertation/dissertation.pdf">Read my Dissertation</a></div>
 
 				<h2>Project Info</h2>
