Forgot to add description to crab sticks

--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@
                         </div>
                     </div>	
                     <div class="numbertext">1 / 2</div>
-                    <a href="./projects/crabsticks/"><img class="image" src="assets/corporate/Ecopolis.PNG" style="width:100%"></a>
-                    <div class="text">Crab Sticks is a </div>
+                    <a href="./projects/crabsticks/"><img class="image" src="assets/corporate/crab.png" style="width:100%"></a>
+                    <div class="text">Crab Sticks is a comical yet competitive local multiplayer party game, where players play as crabs and compete in minigames to earn the most points.</div>
                     <br>
                 </div>
 
