Adding Tiga Nominated to CrabSticks

--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
                         <div class="work-item-tag" style="background-color: #2b2bcd">
                             <span>Blueprint</span>
                         </div>
-                        <div class="work-item-tag" style="background-color: #00b4d8">
-                            <span>C++</span>
+                        <div class="work-item-tag" style="background-color: #ff7b00">
+                            <span>TIGA Nominated</span>
                         </div>
                         <div class="work-item-tag" style="background-color: #d97913">
                             <span>Collaborative</span>
